// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeView component renders correctly 1`] = `
<Text
  style={
    Object {
      "color": "#627286",
      "fontFamily": "OpenSans-Regular",
      "fontSize": 14,
    }
  }
  testID="time_view"
>
  Oct 20, 2020
</Text>
`;

exports[`TimeView component renders correctly with props style 1`] = `
<Text
  style={
    Object {
      "color": "#FF9800",
      "fontFamily": "OpenSans-Regular",
      "fontSize": 14,
    }
  }
  testID="time_view"
>
  Today at 12:00 AM
</Text>
`;

exports[`TimeView component renders correctly with props textProps 1`] = `
<Text
  numberOfLines={2}
  style={
    Object {
      "color": "#627286",
      "fontFamily": "OpenSans-Regular",
      "fontSize": 14,
    }
  }
  testID="time_view"
>
  Today at 12:00 AM
</Text>
`;

exports[`TimeView component renders correctly with time empty 1`] = `
<Text
  style={
    Object {
      "color": "#627286",
      "fontFamily": "OpenSans-Regular",
      "fontSize": 14,
    }
  }
  testID="time_view"
>
  
</Text>
`;
